<resources>
    <string name="app_name">Orb Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="launch_fragment_label">Orb Demo</string>
    <string name="chat_fragment_label">Orb</string>
    <string name="grid_url">Grid URL</string>
    <string name="app_id">App ID</string>
    <string name="integration_id">Integration ID</string>
    <string name="launch_orb">Launch Orb</string>
    <string name="launch_activity">Launch Activity</string>
    <string name="previous">Previous</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>